[Codegen] Introduce optimization level to Codegen.
The revision adds CodegenOptions (shared) and CPUCodegenOptions and
moves few CPU flags to the struct:
- iree-llvmcpu-disable-distribution
- iree-llvmcpu-fail-on-out-of-bounds-stack-allocation
- iree-llvmcpu-reassociate-fp-reductions

It also introduces `iree-codegen-emit-performance-warnings` and uses it
for a performance warning.

The performance warning flag can also be used by software emulation
warning if needed.

It is a step towards https://github.com/iree-org/iree/issues/19072

Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/compiler/src/iree/compiler/API/Internal/CMakeLists.txt
+++ b/compiler/src/iree/compiler/API/Internal/CMakeLists.txt
@@ -30,6 +30,7 @@ iree_cc_library(
     MLIRParser
     MLIRRemarkStreamer
     MLIRSupport
+    iree::compiler::Codegen::Utils::CodegenOptions
     iree::compiler::ConstEval
     iree::compiler::Dialect::VM::Target::Bytecode
     iree::compiler::Dialect::VM::Target::C
