--- a/compiler/src/iree/compiler/Codegen/Utils/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Utils/CMakeLists.txt
@@ -94,4 +94,17 @@ iree_cc_library(
   PUBLIC
 )
 
+iree_cc_library(
+  NAME
+    CodegenOptions
+  HDRS
+    "CodegenOptions.h"
+  SRCS
+    "CodegenOptions.cpp"
+  DEPS
+    LLVMSupport
+    iree::compiler::Utils
+  PUBLIC
+)
+
 ### BAZEL_TO_CMAKE_PRESERVES_ALL_CONTENT_BELOW_THIS_LINE ###
