[Stream] Verify flow.executable operations in input
Signed-off-by: Lukas Sommer <lukas.sommer@amd.com>

--- a/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Stream/Transforms/test/BUILD.bazel
@@ -73,6 +73,7 @@ iree_lit_test_suite(
             "unify_encoding_for_globals.mlir",
             "verify_affinities.mlir",
             "verify_async_access_ranges.mlir",
+            "verify_input.mlir",
         ],
         include = ["*.mlir"],
     ),
