--- a/.github/workflows/ci_linux_x64_gcc.yml
+++ b/.github/workflows/ci_linux_x64_gcc.yml
@@ -27,7 +27,10 @@ jobs:
       - name: "Checking out repository"
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
-          submodules: true
+          submodules: false
+      - name: Fetch submodules with depth 1
+        run: |
+          git submodule update --init --depth 1
       - name: "Building IREE with gcc"
         env:
           CC: gcc-11
