--- a/.github/workflows/publish_website.yml
+++ b/.github/workflows/publish_website.yml
@@ -47,8 +47,11 @@ jobs:
       - name: Checkout out repository
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
-          submodules: true
+          submodules: false
           token: ${{ secrets.WRITE_ACCESS_TOKEN }}
+      - name: Fetch submodules with depth 1
+        run: |
+          git submodule update --init --depth 1
       - name: Fetching base gh-pages branch
         # We have to explicitly fetch the gh-pages branch as well to preserve history
         run: git fetch --no-tags --prune --depth=1 origin "gh-pages:gh-pages"
