relocate to BubbleUpExpandShapes
Signed-off-by: Yu-Zhewen <zhewenyu@amd.com>

--- a/compiler/src/iree/compiler/DispatchCreation/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/DispatchCreation/test/CMakeLists.txt
@@ -49,6 +49,7 @@ iree_lit_test_suite(
     "pipeline_tests.mlir"
     "pipeline_tests_aggressive.mlir"
     "pipeline_tests_split_reduction.mlir"
+    "propagate_bitcast.mlir"
     "propagate_encodings.mlir"
     "remove_tensor_barriers.mlir"
     "set_encoding.mlir"
@@ -57,7 +58,6 @@ iree_lit_test_suite(
     "set_split_reduction_sizes_conv.mlir"
     "set_split_reduction_sizes_gemm.mlir"
     "set_split_reduction_sizes_outer_reduction.mlir"
-    "sink_bitcast.mlir"
     "sink_reshapes.mlir"
     "split_reduction.mlir"
     "tensor_pad_to_tensor_insert_slice.mlir"
