Also increase softmax

--- a/tests/e2e/linalg/BUILD.bazel
+++ b/tests/e2e/linalg/BUILD.bazel
@@ -249,6 +249,7 @@ ROCM_SRCS = enforce_glob(
 
 iree_check_single_backend_test_suite(
     name = "check_rocm_hip",
+    timeout = "moderate",
     srcs = ROCM_SRCS,
     driver = "hip",
     target_backend = "rocm",
