--- a/tests/e2e/linalg/CMakeLists.txt
+++ b/tests/e2e/linalg/CMakeLists.txt
@@ -175,6 +175,8 @@ iree_check_single_backend_test_suite(
     "rocm"
   DRIVER
     "hip"
+  TIMEOUT
+    300
 )
 
 iree_check_single_backend_test_suite(
