--- a/.github/workflows/pkgci_test_amd_w7900.yml
+++ b/.github/workflows/pkgci_test_amd_w7900.yml
@@ -78,7 +78,7 @@ jobs:
             iree/hal/drivers/hip/cts/hip_multi_queue_graph_queue_1_buffer_mapping_test
             iree/hal/drivers/hip/cts/hip_multi_queue_graph_queue_1_command_buffer_dispatch_constants_test
             iree/hal/drivers/hip/cts/hip_multi_queue_graph_queue_1_command_buffer_fill_buffer_test
-          IREE_CTEST_LABEL_REGEX: ^(?!hip_(?:stream|graph|multi_queue_stream|multi_queue_graph|multi_queue_stream_queue_1|multi_queue_graph_queue_1)_(?:buffer_mapping|command_buffer_dispatch_constants|command_buffer_fill_buffer)$)(?:requires-gpu|driver=vulkan$|driver=hip$)
+          IREE_CTEST_LABEL_REGEX: ^requires-gpu|^driver=vulkan$|^driver=hip$
           IREE_AMD_RDNA3_TESTS_DISABLE: 0
           IREE_NVIDIA_GPU_TESTS_DISABLE: 0
           IREE_NVIDIA_SM80_TESTS_DISABLE: 1
