Implement missing stablehlo.fft operations (#22829)
See issue [#22695](https://github.com/iree-org/iree/issues/22695). This
change does the following:
- Causes a compile error when the fft length has more than 1 dimension
(this was never supported but previously gave the wrong answer
silently).
- Fixes an issue with RFFT where the imaginary part (a constant zero
tensor) could cause a large stack allocation and fail to compile. Fixed
by creating the zero imaginary tensor as part of the input shuffling
step.
- Implements the remaining FFT operations: FFT, IFFT, IRFFT.
- Changes the function name `rewriteFft` to `rewriteRfft` since it only
handles RFFT. The function `rewriteFft` is now used for the full FFT.
Also adds `rewriteIrfft`.
- Updates Torch to use the new interface (i.e. changes calling
`rewriteRfft` to `rewriteFft`).
- Updates the Torch tests to reflect changes in RFFT code gen.
- Updates the StableHLO tests to reflect changes in RFFT code gen.
- Adds StableHLO tests for FFT, IFFT, and IRFFT.
- Adds e2e tests for `stablehlo.fft`. Note that these are disabled in
VMVX due to apparent issues with complex numbers. I mention this in the
issue. Also disabled in Vulkan (again mentioned in the issue), but it's
worth noting that the FFTs _do_ compile and run when using `sm_75`, but
fail to compile with the Vulkan target is omitted. I haven't tried other
Vulkan targets.

---------

Signed-off-by: Paul Stark <paul.stark@cdprojektred.com>

--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/CMakeLists.txt
@@ -55,6 +55,7 @@ iree_cc_library(
     MLIRArithDialect
     MLIRArithUtils
     MLIRBufferizationDialect
+    MLIRComplexDialect
     MLIRFuncDialect
     MLIRFunctionInterfaces
     MLIRIR
