--- a/tests/e2e/stablehlo_ops/BUILD.bazel
+++ b/tests/e2e/stablehlo_ops/BUILD.bazel
@@ -40,6 +40,7 @@ ALL_SRCS = enforce_glob(
         "exponential_fp16.mlir",
         "exponential_minus_one.mlir",
         "fft.mlir",
+        "fft_complex.mlir",
         "finite.mlir",
         "floor.mlir",
         "gather.mlir",
@@ -186,6 +187,7 @@ iree_check_single_backend_test_suite(
         exclude = [
             "dot_bf16.mlir",
             "exponential_fp16.mlir",
+            "fft_complex.mlir",
         ],
     ),
     compiler_flags = [
@@ -265,6 +267,7 @@ iree_check_single_backend_test_suite(
         exclude = [
             "exponential_fp16.mlir",
             "fft.mlir",  # TODO(#9583)
+            "fft_complex.mlir",
         ],
     ),
     compiler_flags = [
@@ -354,6 +357,7 @@ iree_check_single_backend_test_suite(
             "exponential_fp16.mlir",
             "exponential_minus_one.mlir",
             "fft.mlir",
+            "fft_complex.mlir",
             "finite.mlir",
             "floor.mlir",
             "gather.mlir",
