--- a/tests/e2e/stablehlo_ops/CMakeLists.txt
+++ b/tests/e2e/stablehlo_ops/CMakeLists.txt
@@ -44,6 +44,7 @@ iree_check_single_backend_test_suite(
     "exponential_fp16.mlir"
     "exponential_minus_one.mlir"
     "fft.mlir"
+    "fft_complex.mlir"
     "finite.mlir"
     "floor.mlir"
     "gather.mlir"
@@ -121,6 +122,7 @@ iree_check_single_backend_test_suite(
     "exponential_fp16.mlir"
     "exponential_minus_one.mlir"
     "fft.mlir"
+    "fft_complex.mlir"
     "finite.mlir"
     "floor.mlir"
     "gather.mlir"
@@ -343,6 +345,7 @@ iree_check_single_backend_test_suite(
     "exponential_fp16.mlir"
     "exponential_minus_one.mlir"
     "fft.mlir"
+    "fft_complex.mlir"
     "finite.mlir"
     "floor.mlir"
     "gather.mlir"
@@ -426,6 +429,7 @@ iree_check_single_backend_test_suite(
     "exponential_fp16.mlir"
     "exponential_minus_one.mlir"
     "fft.mlir"
+    "fft_complex.mlir"
     "finite.mlir"
     "floor.mlir"
     "gather.mlir"
@@ -508,6 +512,7 @@ iree_check_single_backend_test_suite(
     "exponential_fp16.mlir"
     "exponential_minus_one.mlir"
     "fft.mlir"
+    "fft_complex.mlir"
     "finite.mlir"
     "floor.mlir"
     "gather.mlir"
@@ -582,6 +587,7 @@ iree_check_single_backend_test_suite(
     "exponential_fp16.mlir"
     "exponential_minus_one.mlir"
     "fft.mlir"
+    "fft_complex.mlir"
     "finite.mlir"
     "floor.mlir"
     "gather.mlir"
@@ -728,6 +734,7 @@ iree_check_single_backend_test_suite(
     "exponential_fp16.mlir"
     "exponential_minus_one.mlir"
     "fft.mlir"
+    "fft_complex.mlir"
     "finite.mlir"
     "floor.mlir"
     "gather.mlir"
