[CI] disable failing cts tests (#23300)
Following a discussion on https://github.com/iree-org/iree/issues/23242,
it was stated that disabling cts tests should be disabled until they are
fixed. This PR disables the following tests:

```
The following tests FAILED:
	 71 - iree/hal/drivers/hip/cts/hip_stream_buffer_mapping_test (Subprocess aborted)
	 73 - iree/hal/drivers/hip/cts/hip_stream_command_buffer_dispatch_constants_test (Failed)
	 74 - iree/hal/drivers/hip/cts/hip_stream_command_buffer_fill_buffer_test (Subprocess aborted)
	 81 - iree/hal/drivers/hip/cts/hip_graph_buffer_mapping_test (Subprocess aborted)
	 83 - iree/hal/drivers/hip/cts/hip_graph_command_buffer_dispatch_constants_test (Failed)
	 84 - iree/hal/drivers/hip/cts/hip_graph_command_buffer_fill_buffer_test (Subprocess aborted)
	 91 - iree/hal/drivers/hip/cts/hip_multi_queue_stream_buffer_mapping_test (Subprocess aborted)
	 93 - iree/hal/drivers/hip/cts/hip_multi_queue_stream_command_buffer_dispatch_constants_test (Failed)
	 94 - iree/hal/drivers/hip/cts/hip_multi_queue_stream_command_buffer_fill_buffer_test (Subprocess aborted)
	101 - iree/hal/drivers/hip/cts/hip_multi_queue_graph_buffer_mapping_test (Subprocess aborted)
	103 - iree/hal/drivers/hip/cts/hip_multi_queue_graph_command_buffer_dispatch_constants_test (Failed)
	104 - iree/hal/drivers/hip/cts/hip_multi_queue_graph_command_buffer_fill_buffer_test (Subprocess aborted)
	111 - iree/hal/drivers/hip/cts/hip_multi_queue_stream_queue_1_buffer_mapping_test (Subprocess aborted)
	113 - iree/hal/drivers/hip/cts/hip_multi_queue_stream_queue_1_command_buffer_dispatch_constants_test (Failed)
	114 - iree/hal/drivers/hip/cts/hip_multi_queue_stream_queue_1_command_buffer_fill_buffer_test (Subprocess aborted)
	121 - iree/hal/drivers/hip/cts/hip_multi_queue_graph_queue_1_buffer_mapping_test (Subprocess aborted)
	123 - iree/hal/drivers/hip/cts/hip_multi_queue_graph_queue_1_command_buffer_dispatch_constants_test (Failed)
	124 - iree/hal/drivers/hip/cts/hip_multi_

--- a/.github/workflows/pkgci_test_amd_w7900.yml
+++ b/.github/workflows/pkgci_test_amd_w7900.yml
@@ -59,6 +59,28 @@ jobs:
       - name: Run GPU tests
         env:
           CTEST_PARALLEL_LEVEL: 1
+          # TODO: https://github.com/iree-org/iree/issues/23242
+          # These tests are failing on the w7900 runner and are disabled
+          # until the issue is investigated further.
+          IREE_EXTRA_NEWLINE_SEPARATED_CTEST_TESTS_TO_EXCLUDE: |-
+            iree/hal/drivers/hip/cts/hip_stream_buffer_mapping_test
+            iree/hal/drivers/hip/cts/hip_stream_command_buffer_dispatch_constants_test
+            iree/hal/drivers/hip/cts/hip_stream_command_buffer_fill_buffer_test
+            iree/hal/drivers/hip/cts/hip_graph_buffer_mapping_test
+            iree/hal/drivers/hip/cts/hip_graph_command_buffer_dispatch_constants_test
+            iree/hal/drivers/hip/cts/hip_graph_command_buffer_fill_buffer_test
+            iree/hal/drivers/hip/cts/hip_multi_queue_stream_buffer_mapping_test
+            iree/hal/drivers/hip/cts/hip_multi_queue_stream_command_buffer_dispatch_constants_test
+            iree/hal/drivers/hip/cts/hip_multi_queue_stream_command_buffer_fill_buffer_test
+            iree/hal/drivers/hip/cts/hip_multi_queue_graph_buffer_mapping_test
+            iree/hal/drivers/hip/cts/hip_multi_queue_graph_command_buffer_dispatch_constants_test
+            iree/hal/drivers/hip/cts/hip_multi_queue_graph_command_buffer_fill_buffer_test
+            iree/hal/drivers/hip/cts/hip_multi_queue_stream_queue_1_buffer_mapping_test
+            iree/hal/drivers/hip/cts/hip_multi_queue_stream_queue_1_command_buffer_dispatch_constants_test
+            iree/hal/drivers/hip/cts/hip_multi_queue_stream_queue_1_command_buffer_fill_buffer_test
+            iree/hal/drivers/hip/cts/hip_multi_queue_graph_queue_1_buffer_mapping_test
+            iree/hal/drivers/hip/cts/hip_multi_queue_graph_queue_1_command_buffer_dispatch_constants_test
+            iree/hal/drivers/hip/cts/hip_multi_queue_graph_queue_1_command_buffer_fill_buffer_test
           IREE_CTEST_LABEL_REGEX: ^requires-gpu|^driver=vulkan$|^driver=hip$
           IREE_AMD_RDNA3_TESTS_DISABLE: 0
           IREE_NVIDIA_GPU_TESTS_DISABLE: 0
