[CI] Update iree-test-suite to run convolution tests

--- a/.github/workflows/pkgci_test_torch.yml
+++ b/.github/workflows/pkgci_test_torch.yml
@@ -77,8 +77,9 @@ jobs:
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           repository: iree-org/iree-test-suites
-          ref: d05b49f94d4c93086ff4b55f0d1e028f077a17f4
+          ref: 30a9e6c7dc4b0760fd3275b39a97745fbd3a2d94
           path: iree-test-suites
+          lfs: true
       - name: Install Torch ops test suite requirements
         run: |
           source ${VENV_DIR}/bin/activate
@@ -144,7 +145,7 @@ jobs:
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
         with:
           repository: iree-org/iree-test-suites
-          ref: d05b49f94d4c93086ff4b55f0d1e028f077a17f4
+          ref: 30a9e6c7dc4b0760fd3275b39a97745fbd3a2d94
           path: iree-test-suites
           # Don't need lfs for torch models yet.
           lfs: false
