Add tuning spec flags to TuningSpecOptions for C API support
Signed-off-by: Bangtian Liu <liubangtian@gmail.com>

--- a/compiler/src/iree/compiler/API/Internal/CMakeLists.txt
+++ b/compiler/src/iree/compiler/API/Internal/CMakeLists.txt
@@ -30,6 +30,8 @@ iree_cc_library(
     MLIRParser
     MLIRRemarkStreamer
     MLIRSupport
+    iree::compiler::Codegen::Common::PassHeaders
+    iree::compiler::Codegen::Common::TuningSpecOptions
     iree::compiler::ConstEval
     iree::compiler::Dialect::VM::Target::Bytecode
     iree::compiler::Dialect::VM::Target::C
