--- a/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
@@ -39,6 +39,20 @@ iree_cc_library(
   PUBLIC
 )
 
+iree_cc_library(
+  NAME
+    TuningSpecOptions
+  HDRS
+    "Options.h"
+  SRCS
+    "Options.cpp"
+  DEPS
+    LLVMSupport
+    MLIRIR
+    iree::compiler::Utils
+  PUBLIC
+)
+
 iree_tablegen_library(
   NAME
     FoldTensorExtractOpIncGen
@@ -171,6 +185,7 @@ iree_cc_library(
   DEPS
     ::PassHeaders
     ::PassesIncGen
+    ::TuningSpecOptions
     IREELinalgTransformDialect
     LLVMSupport
     MLIRAMDGPUDialect
