[Codegen] Add FusePCFStoresPass for store fusion into PCF ops
Port FuseStoreToBuffer and FuseDispatchTensorStore patterns from the
prototype (users/qedawkins/pcf-integration) to enable fusing store
operations into PCF parallel ops.

FuseStoreToBuffer: Fuses iree_codegen.store_to_buffer with pcf.loop/
pcf.generic by converting pcf.write_slice to direct memref writes
(subview + store/copy/transfer_write depending on source type).

FuseDispatchTensorStore: Fuses iree_tensor_ext.dispatch_tensor_store
with PCF parallel ops by creating per-slice stores with composed
offsets. Includes optimization for rank-reducing insert_slice into
tensor.empty.

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -112,6 +112,7 @@ iree_compiler_cc_library(
         "FoldTensorSubsetIntoVectorTransferOps.cpp",
         "ForOpCanonicalizationPass.cpp",
         "ForallToFor.cpp",
+        "FusePCFStores.cpp",
         "FuseTensorPadWithConsumer.cpp",
         "GenericVectorization.cpp",
         "HoistStaticallyBoundAllocations.cpp",
