--- a/compiler/src/iree/compiler/Codegen/Utils/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Utils/CMakeLists.txt
@@ -33,6 +33,7 @@ iree_cc_library(
     LLVMSupport
     LLVMTargetParser
     MLIRAMDGPUDialect
+    MLIRAMDGPUUtils
     MLIRAffineDialect
     MLIRAnalysis
     MLIRArithDialect
