--- a/compiler/src/iree/compiler/DispatchCreation/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/DispatchCreation/test/BUILD.bazel
@@ -52,6 +52,7 @@ iree_lit_test_suite(
             "pipeline_tests.mlir",
             "pipeline_tests_aggressive.mlir",
             "pipeline_tests_split_reduction.mlir",
+            "propagate_bitcast.mlir",
             "propagate_encodings.mlir",
             "remove_tensor_barriers.mlir",
             "set_encoding.mlir",
