Added attention.mlir to ROCM_HIP_STC test list
Signed-off-by: Keshav Vinayak Jha <keshavvinayakjha@gmail.com>

--- a/tests/e2e/linalg_ext_ops/CMakeLists.txt
+++ b/tests/e2e/linalg_ext_ops/CMakeLists.txt
@@ -86,6 +86,7 @@ iree_check_single_backend_test_suite(
     check_rocm_hip
   SRCS
     "arg_compare.mlir"
+    "attention.mlir"
     "gather.mlir"
     "map_gather.mlir"
     "map_scatter.mlir"
