Add LDS alias scopes for better vmcnt generation
This adds ROCDLAddLDSAliasScopesPass to attach LLVM alias scope metadata
to ROCDL::LoadToLDSOp operations, enabling the LLVM backend to generate
more precise s_waitcnt instructions.

Without alias scopes, SIInsertWaitcnts conservatively inserts vmcnt(0)
before any LDS access that might alias with a prior LoadToLDS operation.

With alias scopes, the backend understands that:
- LoadToLDS ops to buffer 0 don't alias with ops to buffer 1
- ds_read from buffer 0 doesn't conflict with LoadToLDS to buffer 1

This eliminates one redundant vmcnt(0) that would otherwise be inserted
before ds_read operations, enabling better overlap between buffer_load_lds
and ds_read/mfma instructions in the pipelined loop.

TODO: Move alias scope logic into the upstream GatherToLDSOpLowering
pattern in mlir/lib/Conversion/AMDGPUToROCDL/AMDGPUToROCDL.cpp once
this approach is validated.

--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/CMakeLists.txt
@@ -89,6 +89,7 @@ iree_cc_library(
     "LLVMGPUVectorLowering.cpp"
     "LLVMGPUVectorToGPU.cpp"
     "Passes.cpp"
+    "ROCDLAddLDSAliasScopes.cpp"
     "ROCDLAnnotateKernelForTranslation.cpp"
     "ROCDLBufferInstructionsOptimization.cpp"
     "ROCDLConfigureBufferInstructions.cpp"
