--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -124,6 +124,7 @@ iree_compiler_cc_library(
         "IREEExpandStridedMetadata.cpp",
         "IREEInjectAssumeAlignment.cpp",
         "IREELoopInvariantCodeMotion.cpp",
+        "InsertBatchDimForBatchlessConv.cpp",
         "InstrumentMemoryAccesses.cpp",
         "LinkTuningSpecsPass.cpp",
         "LowerExecutableUsingTransformDialect.cpp",
