--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/BUILD.bazel
@@ -39,6 +39,7 @@ iree_compiler_cc_library(
         "DecomposeMapScatter.cpp",
         "DecomposeWinogradPass.cpp",
         "FoldUnitExtentDims.cpp",
+        "LoopMappingUtils.cpp",
         "PadContractionToBlockSize.cpp",
         "Passes.cpp",
         "ReshapeFusion.cpp",
@@ -50,6 +51,7 @@ iree_compiler_cc_library(
         "VectorizeIREELinalgExtOps.cpp",
     ],
     hdrs = [
+        "LoopMappingUtils.h",
         "Passes.h",
         "Passes.h.inc",
         "Transforms.h",
