--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -56,6 +56,7 @@
 
 # Compiler
 /compiler/src/iree/compiler/ @benvanik
+/compiler/src/iree/compiler/API/ @benvanik @IanWood1
 /compiler/src/iree/compiler/Codegen/ @MaheshRavishankar
 /compiler/src/iree/compiler/Codegen/Common @hanhanW @Max191 @MaheshRavishankar @qedawkins
 /compiler/src/iree/compiler/Codegen/Common/GPU @qedawkins @Groverkss @kuhar
@@ -78,6 +79,7 @@
 /compiler/src/iree/compiler/DispatchCreation/ @MaheshRavishankar @IanWood1
 /compiler/src/iree/compiler/GlobalOptimization/ @MaheshRavishankar @IanWood1
 /compiler/src/iree/compiler/InputConversion/ @MaheshRavishankar
+/compiler/src/iree/compiler/Pipelines/ @benvanik @IanWood1
 /compiler/src/iree/compiler/Preprocessing/ @qedawkins @MaheshRavishankar
 
 # Compiler Plugins
