Fix Bazel probably

--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/TransformExtensions/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/TransformExtensions/CMakeLists.txt
@@ -43,6 +43,7 @@ iree_cc_library(
     MLIRFunctionInterfaces
     MLIRGPUDialect
     MLIRGPUTransformOps
+    MLIRGPUTransforms
     MLIRIR
     MLIRLinalgTransforms
     MLIRLinalgUtils
@@ -68,8 +69,6 @@ iree_cc_library(
     iree::compiler::Codegen::Dialect::Codegen::Utils
     iree::compiler::Codegen::Dialect::GPU::IR::IREEGPUDialect
     iree::compiler::Codegen::LLVMGPU::Utils
-    iree::compiler::Codegen::Utils
-    iree::compiler::Dialect::HAL::IR
   PUBLIC
 )
 
