--- a/tests/e2e/linalg/CMakeLists.txt
+++ b/tests/e2e/linalg/CMakeLists.txt
@@ -168,6 +168,7 @@ iree_check_single_backend_test_suite(
     "index.mlir"
     "narrow_n_matmuls.mlir"
     "pack_i8.mlir"
+    "small_float_arith.mlir"
     "softmax.mlir"
     "subbyte_to_fp.mlir"
     "unpack.mlir"
@@ -175,6 +176,8 @@ iree_check_single_backend_test_suite(
     "rocm"
   DRIVER
     "hip"
+  COMPILER_FLAGS
+    "--iree-llvmgpu-enable-small-float-emulation"
   TIMEOUT
     300
 )
