--- a/compiler/src/iree/compiler/Dialect/VM/Conversion/ArithToVM/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/VM/Conversion/ArithToVM/BUILD.bazel
@@ -24,6 +24,7 @@ iree_compiler_cc_library(
         "//compiler/src/iree/compiler/Dialect/Util/IR",
         "//compiler/src/iree/compiler/Dialect/VM/Conversion",
         "//compiler/src/iree/compiler/Dialect/VM/IR",
+        "@llvm-project//llvm:Support",
         "@llvm-project//mlir:ArithDialect",
         "@llvm-project//mlir:FunctionInterfaces",
         "@llvm-project//mlir:IR",
