--- a/compiler/src/iree/compiler/Dialect/VM/Conversion/ArithToVM/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/VM/Conversion/ArithToVM/CMakeLists.txt
@@ -18,6 +18,7 @@ iree_cc_library(
   SRCS
     "Patterns.cpp"
   DEPS
+    LLVMSupport
     MLIRArithDialect
     MLIRFunctionInterfaces
     MLIRIR
