[SPIRV] Enable small float support in SPIR-V pipeline.
Add ConvertUnsupportedFloatArithPass and
ConvertUnsupportedFloatToIntBuffersPass to the SPIR-V lowering pipeline
to emulate bf16 and fp8 arithmetic and buffer types. Also add expansion
patterns for f4E2M1FN, and f8E8M0FNU in ConvertToSPIRVPass.

Enable small_float_arith and fp_to_subbyte e2e tests for vulkan-spirv.
The fp4_f32_conversion test is excluded because scaling_extf/truncf
lowering is not properly supported yet.

Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/tests/e2e/linalg/CMakeLists.txt
+++ b/tests/e2e/linalg/CMakeLists.txt
@@ -94,9 +94,11 @@ iree_check_single_backend_test_suite(
   SRCS
     "argmax.mlir"
     "conv2d.mlir"
+    "fp_to_subbyte.mlir"
     "gather_like_ops.mlir"
     "index.mlir"
     "narrow_n_matmuls.mlir"
+    "small_float_arith.mlir"
     "softmax.mlir"
     "subbyte_to_fp.mlir"
   TARGET_BACKEND
