[CPU] Plumb through tuning spec support for LLVMCPU.
Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/LLVMCPU/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/LLVMCPU/test/BUILD.bazel
@@ -35,6 +35,7 @@ iree_lit_test_suite(
             "hal_interface_constants.mlir",
             "hal_interface_workgroup_info.mlir",
             "illegal_configuration.mlir",
+            "lowering_strategy_from_tuning_spec.mlir",
             "peel.mlir",
             "pipeline_arm_sme_streaming_mode_tests.mlir",
             "pipeline_disable_distribution_tests.mlir",
@@ -71,8 +72,12 @@ iree_lit_test_suite(
             "verify_vector_size_legality.mlir",
         ],
         include = ["*.mlir"],
+        exclude = ["tuning_spec_matmul.mlir"],
     ),
     cfg = "//compiler:lit.cfg.py",
+    data = [
+        "tuning_spec_matmul.mlir",
+    ],
     tools = [
         "//tools:iree-compile",
         "//tools:iree-opt",
