cmake: Detect Metal compilation tools availability on macOS
On macOS arm64 systems, Metal support was being enabled by default
without checking if the required Metal offline compilation tools
(metal and metallib) are available. These tools are only included
in the full Xcode installation, not in the Command Line Tools package.

This caused build failures when users had only Command Line Tools
installed, as the build would attempt to compile Metal shaders but
fail with "xcrun: error: unable to find utility 'metal'".

This change adds explicit detection of the Metal compilation tools
during CMake configuration. If the tools are not found:
- A clear warning message is displayed explaining the issue
- Metal support is automatically disabled
- The build can proceed successfully without Metal backend

If the tools are found, their paths are logged for confirmation.

This allows IREE to build successfully on macOS systems with only
Command Line Tools installed, while still enabling Metal support
when full Xcode is available.

Fixes build failures on macOS arm64 with Command Line Tools only.

Signed-off-by: dbrll <dbrll@users.noreply.github.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -294,6 +294,41 @@ set(IREE_HAL_DRIVER_METAL_DEFAULT ${IREE_HAL_DRIVER_DEFAULTS})
 # Right now only support Apple silicon devices.
 if(NOT APPLE OR NOT ${CMAKE_SYSTEM_PROCESSOR} MATCHES "arm64")
   set(IREE_HAL_DRIVER_METAL_DEFAULT OFF)
+else()
+  # Check if Metal offline compilation tools are available
+  # These tools are required to compile MSL to Metal libraries
+  find_program(METAL_COMPILER xcrun)
+  if(METAL_COMPILER)
+    execute_process(
+      COMMAND xcrun --find metal
+      OUTPUT_VARIABLE METAL_TOOL_PATH
+      ERROR_QUIET
+      OUTPUT_STRIP_TRAILING_WHITESPACE
+      RESULT_VARIABLE METAL_TOOL_RESULT
+    )
+    execute_process(
+      COMMAND xcrun --find metallib
+      OUTPUT_VARIABLE METALLIB_TOOL_PATH
+      ERROR_QUIET
+      OUTPUT_STRIP_TRAILING_WHITESPACE
+      RESULT_VARIABLE METALLIB_TOOL_RESULT
+    )
+    if(NOT METAL_TOOL_RESULT EQUAL 0 OR NOT METALLIB_TOOL_RESULT EQUAL 0)
+      message(WARNING "Metal offline compilation tools (metal/metallib) not found. "
+              "Metal support will be disabled. "
+              "To enable Metal support, install Xcode (not just Command Line Tools) "
+              "and run: sudo xcode-select --switch /Applications/Xcode.app/Contents/Developer")
+      set(IREE_HAL_DRIVER_METAL_DEFAULT OFF)
+      set(IREE_TARGET_BACKEND_METAL_SPIRV OFF CACHE BOOL "Metal backend disabled (tools not found)" FORCE)
+    else()
+      message(STATUS "Metal offline compilation tools found:")
+      message(STATUS "  metal: ${METAL_TOOL_PATH}")
+      message(STATUS "  metallib: ${METALLIB_TOOL_PATH}")
+    endif()
+  else()
+    message(WARNING "xcrun not found. Metal support will be disabled.")
+    set(IREE_HAL_DRIVER_METAL_DEFAULT OFF)
+  endif()
 endif()
 
 # Null skeleton driver is only enabled in debug builds or dev mode.
